# NeedForScenes

./: CMakeLists.txt  README.md  main.cpp  play.cpp  test_play.cpp
.github/workflows/: cmake.yml
Algo/: tracker.cpp  tracker.hpp
Control/: controller.cpp  controller.hpp
Objects/: camera.cpp  car.cpp  car.hpp  obstacle.cpp  obstacle.hpp  parkingspot.cpp  parkingspot.hpp  road.cpp  road.hpp  scene.hpp  structs.hpp
Scene/: scene.cpp  scene.hpp
Sensors/: lidar.cpp  lidar.hpp  sensors.hpp
Toolkit/: tools.cpp  tools.hpp
Tools/: tools.cpp
View/: camera.cpp  camera.hpp
